unpackaged/main/default/objects/Account/fields/CL_HelperVISSST12__c.field-meta.xml
<CustomField>
    <fullName>CL_HelperVISSST12__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hilfsfeld zum Auslösen eines PG&#39;s nach Rückmeldung der SST1.2 &quot;VIS hat seine Arbeit erledigt&quot;</description>
    <inlineHelpText>Hilfsfeld zum Auslösen eines PG&#39;s nach Rückmeldung der SST1.2 &quot;VIS hat seine Arbeit erledigt&quot;</inlineHelpText>
    <label>Helper VIS SST1.2</label>
    <type>Checkbox</type>
</CustomField>