unpackaged/main/default/objects/Account/fields/CL_HelperVISSST16__c.field-meta.xml
<CustomField>
    <fullName>CL_HelperVISSST16__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Helper VIS SST1.6</label>
    <type>Checkbox</type>
</CustomField>