unpackaged/main/default/objects/Account/fields/CL_KonzerndebitorNr__c.field-meta.xml
<CustomField>
    <fullName>CL_KonzerndebitorNr__c</fullName>
    <label>Konzerndebitor-Nr.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>