unpackaged/main/default/objects/Account/fields/CL_Kreditlimit__c.field-meta.xml
<CustomField>
    <fullName>CL_Kreditlimit__c</fullName>
    <label>Kreditlimit</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>