unpackaged/main/default/objects/Account/fields/CL_Kundenkreditgruppe__c.field-meta.xml
<CustomField>
    <fullName>CL_Kundenkreditgruppe__c</fullName>
    <label>Kundenkreditgruppe</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abgabe Inkasso</fullName>
            </value>
            <value>
                <fullName>eidesstattliche Versicherung</fullName>
            </value>
            <value>
                <fullName>FIBU-Kunden</fullName>
            </value>
            <value>
                <fullName>inaktiv</fullName>
            </value>
            <value>
                <fullName>Insolvenzverfahren eingeleitet</fullName>
            </value>
            <value>
                <fullName>Negativ Kunde</fullName>
            </value>
            <value>
                <fullName>Neukunde</fullName>
            </value>
            <value>
                <fullName>Top-Kunden</fullName>
            </value>
            <value>
                <fullName>unbekannt verzogen</fullName>
            </value>
            <value>
                <fullName>vereinbarte Ratenzahlung</fullName>
            </value>
            <value>
                <fullName>Vergleich geschlossen</fullName>
            </value>
            <value>
                <fullName>wg Geringfügigkeit ausgebucht</fullName>
            </value>
            <value>
                <fullName>Zwangsvollstreckung fruchtlos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>