unpackaged/main/default/objects/Account/fields/CL_NameTeil2__c.field-meta.xml
<CustomField>
    <fullName>CL_NameTeil2__c</fullName>
    <label>Name Teil 2</label>
    <length>35</length>
    <type>Text</type>
</CustomField>