unpackaged/main/default/objects/Account/fields/CL_NameTeil3Vorher__c.field-meta.xml
<CustomField>
    <fullName>CL_NameTeil3Vorher__c</fullName>
    <label>Name Teil 3 Vorher</label>
    <length>35</length>
    <type>Text</type>
</CustomField>