unpackaged/main/default/objects/Account/fields/CL_NameTeil4__c.field-meta.xml
<CustomField>
    <fullName>CL_NameTeil4__c</fullName>
    <label>Name Teil 4</label>
    <length>35</length>
    <type>Text</type>
</CustomField>