unpackaged/main/default/objects/Account/fields/CL_NationalerBetreuerRollupHelper__c.field-meta.xml
<CustomField>
    <fullName>CL_NationalerBetreuerRollupHelper__c</fullName>
    <label>Nationaler Betreuer Rollup Helper</label>
    <summaryFilterItems>
        <field>Betreuer__c.CL_Betreuungsrolle__c</field>
        <operation>equals</operation>
        <value>Nationaler Vertrieb - Client Sales, Nationaler Vertrieb - Agency Sales</value>
    </summaryFilterItems>
    <summaryForeignKey>Betreuer__c.CL_Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>