unpackaged/main/default/objects/Account/fields/CL_Nielsen__c.field-meta.xml
<CustomField>
    <fullName>CL_Nielsen__c</fullName>
    <externalId>true</externalId>
    <label>Nielsen</label>
    <length>20</length>
    <type>Text</type>
</CustomField>