unpackaged/main/default/objects/Account/fields/CL_PlatinNr__c.field-meta.xml
<CustomField>
    <fullName>CL_PlatinNr__c</fullName>
    <label>Platin Nr.</label>
    <length>50</length>
    <type>Text</type>
</CustomField>