unpackaged/main/default/objects/Account/fields/CL_PLZPostfach__c.field-meta.xml
<CustomField>
    <fullName>CL_PLZPostfach__c</fullName>
    <label>PLZ Postfach</label>
    <length>10</length>
    <type>Text</type>
</CustomField>