unpackaged/main/default/objects/Account/fields/CL_PLZPostfachVorher__c.field-meta.xml
<CustomField>
    <fullName>CL_PLZPostfachVorher__c</fullName>
    <label>PLZ Postfach Vorher</label>
    <length>10</length>
    <type>Text</type>
</CustomField>