unpackaged/main/default/objects/Account/fields/CL_Postfach__c.field-meta.xml
<CustomField>
    <fullName>CL_Postfach__c</fullName>
    <label>Postfach</label>
    <length>10</length>
    <type>Text</type>
</CustomField>