unpackaged/main/default/objects/Account/fields/CL_PostfachVorher__c.field-meta.xml
<CustomField>
    <fullName>CL_PostfachVorher__c</fullName>
    <label>Postfach Vorher</label>
    <length>35</length>
    <type>Text</type>
</CustomField>