unpackaged/main/default/objects/Account/fields/CL_Rating__c.field-meta.xml
<CustomField>
    <fullName>CL_Rating__c</fullName>
    <label>Rating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>