unpackaged/main/default/objects/Account/fields/CL_RechnungsEmail__c.field-meta.xml
<CustomField>
    <fullName>CL_RechnungsEmail__c</fullName>
    <label>Rechnungs-Email</label>
    <type>Email</type>
</CustomField>