unpackaged/main/default/objects/Account/fields/CL_Risikoklasse__c.field-meta.xml
<CustomField>
    <fullName>CL_Risikoklasse__c</fullName>
    <label>Risikoklasse</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>beobachten</fullName>
            </value>
            <value>
                <fullName>nicht kreditwürdig</fullName>
            </value>
            <value>
                <fullName>Risikoklasse 001</fullName>
            </value>
            <value>
                <fullName>sehr kritisch</fullName>
            </value>
            <value>
                <fullName>unkritisch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>