unpackaged/main/default/objects/Account/fields/CL_SalesforceRegioHelden__c.field-meta.xml
<CustomField>
    <fullName>CL_SalesforceRegioHelden__c</fullName>
    <label>Salesforce RegioHelden</label>
    <length>20</length>
    <type>Text</type>
</CustomField>