unpackaged/main/default/objects/Account/fields/CL_SeedingAlliance__c.field-meta.xml
<CustomField>
    <fullName>CL_SeedingAlliance__c</fullName>
    <label>Seeding Alliance</label>
    <length>20</length>
    <type>Text</type>
</CustomField>