unpackaged/main/default/objects/Account/fields/CL_SK__c.field-meta.xml
<CustomField>
    <fullName>CL_SK__c</fullName>
    <label>SK</label>
    <length>20</length>
    <type>Text</type>
</CustomField>