unpackaged/main/default/objects/Account/fields/CL_Sperrgrund__c.field-meta.xml
<CustomField>
    <fullName>CL_Sperrgrund__c</fullName>
    <label>Sperrgrund</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Abrechnung</fullName>
            </value>
            <value>
                <fullName>Datenbereinigung</fullName>
            </value>
            <value>
                <fullName>Dublette</fullName>
            </value>
            <value>
                <fullName>Geschäftsauflösung</fullName>
            </value>
            <value>
                <fullName>Konzerndebitor</fullName>
            </value>
            <value>
                <fullName>Out-of-Business</fullName>
                <isActive>false</isActive>
                <label>Out-of-Business</label>
            </value>
            <value>
                <fullName>Reporting (muss noch geklärt werden)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>