unpackaged/main/default/objects/Account/fields/CL_StatusPWS__c.field-meta.xml
<CustomField>
    <fullName>CL_StatusPWS__c</fullName>
    <label>Status PWS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abgebrochen</fullName>
            </value>
            <value>
                <fullName>anzeigen</fullName>
            </value>
            <value>
                <fullName>erledigt</fullName>
            </value>
            <value>
                <fullName>in Bearbeitung</fullName>
            </value>
            <value>
                <fullName>offen</fullName>
            </value>
            <value>
                <fullName>versäumt</fullName>
            </value>
            <value>
                <fullName>Angelegt</fullName>
            </value>
            <value>
                <fullName>Beantragt - Agentur</fullName>
            </value>
            <value>
                <fullName>Beantragt - Debitor</fullName>
            </value>
            <value>
                <fullName>Beantragt - Direktkunde</fullName>
            </value>
            <value>
                <fullName>Fehler</fullName>
            </value>
            <value>
                <fullName>Beantragt - Agentur;</fullName>
                <isActive>false</isActive>
                <label>Beantragt - Agentur;</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>