unpackaged/main/default/objects/Account/fields/CL_StatusRGEmail__c.field-meta.xml
<CustomField>
    <fullName>CL_StatusRGEmail__c</fullName>
    <label>Status RG-Email</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>angefragt</fullName>
            </value>
            <value>
                <fullName>falsche Email</fullName>
            </value>
            <value>
                <fullName>keine RG per Email</fullName>
            </value>
            <value>
                <fullName>RG per Email</fullName>
            </value>
            <value>
                <fullName>bucht über Agentur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>