unpackaged/main/default/objects/Account/fields/CL_StatusSAP__c.field-meta.xml
<CustomField>
    <fullName>CL_StatusSAP__c</fullName>
    <label>Status SAP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>aktiv</fullName>
            </value>
            <value>
                <fullName>inaktiv</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>