unpackaged/main/default/objects/Account/fields/CL_SteuerNr__c.field-meta.xml
<CustomField>
    <fullName>CL_SteuerNr__c</fullName>
    <label>Steuer-Nr.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>