unpackaged/main/default/objects/Account/fields/CL_Superposter__c.field-meta.xml
<CustomField>
    <fullName>CL_Superposter__c</fullName>
    <label>Superposter</label>
    <length>20</length>
    <type>Text</type>
</CustomField>