unpackaged/main/default/objects/Account/fields/CL_Tubevertise__c.field-meta.xml
<CustomField>
    <fullName>CL_Tubevertise__c</fullName>
    <label>Tubevertise</label>
    <length>20</length>
    <type>Text</type>
</CustomField>