unpackaged/main/default/objects/Account/fields/CL_UAM__c.field-meta.xml
<CustomField>
    <fullName>CL_UAM__c</fullName>
    <label>UAM</label>
    <length>20</length>
    <type>Text</type>
</CustomField>