unpackaged/main/default/objects/Account/fields/CL_UmsatzklassifizierungCL__c.field-meta.xml
<CustomField>
    <fullName>CL_UmsatzklassifizierungCL__c</fullName>
    <inlineHelpText>A : &gt; 2 M€
B : &gt; 400 k€
C : &gt; 200 k€
D : &gt; 100 k€
E : &gt; 50k€
F : &lt; 10k€</inlineHelpText>
    <label>Umsatzklassifizierung CL</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>