unpackaged/main/default/objects/Account/fields/CL_UStID__c.field-meta.xml
<CustomField>
    <fullName>CL_UStID__c</fullName>
    <label>USt ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>