unpackaged/main/default/objects/Account/fields/CL_VertriebsgesellschaftVG1__c.field-meta.xml
<CustomField>
    <fullName>CL_VertriebsgesellschaftVG1__c</fullName>
    <label>Vertriebsgesellschaft (VG1)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Ambient-TV Sales &amp; Servic</fullName>
            </value>
            <value>
                <fullName>BlowUP Media GmbH</fullName>
            </value>
            <value>
                <fullName>Business Advertising GmbH</fullName>
            </value>
            <value>
                <fullName>DERG Vertriebs GmbH</fullName>
            </value>
            <value>
                <fullName>DSA Schuldisplay GmbH</fullName>
            </value>
            <value>
                <fullName>DSM Decaux GmbH</fullName>
            </value>
            <value>
                <fullName>DSM DeutscheStädte-Medien</fullName>
            </value>
            <value>
                <fullName>DSM Werbeträger GmbH &amp; Co. KG</fullName>
            </value>
            <value>
                <fullName>ECE flatmedia GmbH</fullName>
            </value>
            <value>
                <fullName>Edgar Ambient Media Group GmbH</fullName>
            </value>
            <value>
                <fullName>Grapevine Marketing GmbH</fullName>
            </value>
            <value>
                <fullName>Hoffmann City Media GmbH&amp;</fullName>
            </value>
            <value>
                <fullName>INFOSCREEN GmbH</fullName>
            </value>
            <value>
                <fullName>Interactive Media CCSP</fullName>
            </value>
            <value>
                <fullName>Lunenburg und Partner Gmb</fullName>
            </value>
            <value>
                <fullName>MBR Targeting GmbH</fullName>
            </value>
            <value>
                <fullName>Media-Direktservice GmbH</fullName>
            </value>
            <value>
                <fullName>MediaSelect Media-Agentur</fullName>
            </value>
            <value>
                <fullName>Neo Advertising GmbH</fullName>
            </value>
            <value>
                <fullName>Omnea GmbH</fullName>
            </value>
            <value>
                <fullName>Outsite Media GmbH</fullName>
            </value>
            <value>
                <fullName>PosterSelect Media-Agent.</fullName>
            </value>
            <value>
                <fullName>RegioHelden GmbH</fullName>
            </value>
            <value>
                <fullName>Retail Media GmbH</fullName>
            </value>
            <value>
                <fullName>Seeding Alliance GmbH</fullName>
            </value>
            <value>
                <fullName>SIGN YOU mediascreen GmbH</fullName>
            </value>
            <value>
                <fullName>SMD Werbeträger GmbH &amp; Co. KG</fullName>
            </value>
            <value>
                <fullName>SRG Werbeträger GmbH &amp; Co. KG</fullName>
            </value>
            <value>
                <fullName>Ströer Aussenwerbung GmbH</fullName>
            </value>
            <value>
                <fullName>Ströer Content Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>