unpackaged/main/default/objects/Account/fields/CL_VISFirmaLaufNr__c.field-meta.xml
<CustomField>
    <fullName>CL_VISFirmaLaufNr__c</fullName>
    <label>VIS_Firma_LaufNr</label>
    <length>15</length>
    <type>Text</type>
</CustomField>