unpackaged/main/default/objects/Account/fields/CL_VISID__c.field-meta.xml
<CustomField>
    <fullName>CL_VISID__c</fullName>
    <externalId>true</externalId>
    <label>VIS ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>