unpackaged/main/default/objects/Account/fields/CL_WerbungtreibendeEinheit__c.field-meta.xml
<CustomField>
    <fullName>CL_WerbungtreibendeEinheit__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Ist dieser Account eine Werbungtreibende Einheit?</inlineHelpText>
    <label>Werbungtreibende Einheit</label>
    <type>Checkbox</type>
</CustomField>