unpackaged/main/default/objects/Account/fields/CL_ZahlungskonditionenVG1__c.field-meta.xml
<CustomField>
    <fullName>CL_ZahlungskonditionenVG1__c</fullName>
    <label>Zahlungskonditionen (VG1)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>14 Tage ab Re.dat. 2% Skto., 45 Tage ohne Abzug</fullName>
            </value>
            <value>
                <fullName>14 Tagen ab Rechnungsdatum ohne Abzug</fullName>
            </value>
            <value>
                <fullName>14 Tg. ab Leist.beg. 2%Skt.;30 ab Leist.beg. o.Ab</fullName>
            </value>
            <value>
                <fullName>14 Tg. bis Leist.beg. 2% Skt, 30 Tg. o. Abz. ab Le</fullName>
            </value>
            <value>
                <fullName>30 Tage ab Leistungsdatum mit 2% Skonto</fullName>
            </value>
            <value>
                <fullName>30 Tage ab Leistungsdatum ohne Abzug</fullName>
            </value>
            <value>
                <fullName>4 Tage nach Rechnungsdatum ohne Abzug</fullName>
            </value>
            <value>
                <fullName>45 Tagen ab Rechnungsdatum ohne Abzug</fullName>
            </value>
            <value>
                <fullName>8 Tage ab Rechnugsdatum 2 % Skt.; 30 Tage o. Abzug</fullName>
            </value>
            <value>
                <fullName>8 Tage ab Rechnungsdatum ohne Abzug</fullName>
            </value>
            <value>
                <fullName>90 Tage ab Leistungsdatum mit 2% Skonto</fullName>
            </value>
            <value>
                <fullName>90 Tage ab Rechnungsdatum ohne Abzug</fullName>
            </value>
            <value>
                <fullName>Vorauskasse</fullName>
            </value>
            <value>
                <fullName>Fällig zum 1. Tag des Leistungszeitraum ohne Abzug</fullName>
            </value>
            <value>
                <fullName>14 Tage 3%, 20/2%, 30 net</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>