unpackaged/main/default/objects/Account/fields/CL_ZurBearbeitungGesperrt__c.field-meta.xml
<CustomField>
    <fullName>CL_ZurBearbeitungGesperrt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Zur Bearbeitung gesperrt</label>
    <type>Checkbox</type>
</CustomField>