unpackaged/main/default/objects/Account/fields/CLGrundAblehnungNeuanlageAenderungCS1CS2__c.field-meta.xml
<CustomField>
    <fullName>CLGrundAblehnungNeuanlageAenderungCS1CS2__c</fullName>
    <label>Grund der Ablehnung  Neuanlage/Änderung</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Allgemeiner Fehler</fullName>
            </value>
            <value>
                <fullName>CRM Fehler</fullName>
            </value>
            <value>
                <fullName>CRM-Clearingstelle kontakten</fullName>
            </value>
            <value>
                <fullName>Dublette</fullName>
            </value>
            <value>
                <fullName>Falsche Adresse</fullName>
            </value>
            <value>
                <fullName>Fehler im Adress-Segment</fullName>
            </value>
            <value>
                <fullName>Fehler im Bankdatensegment</fullName>
            </value>
            <value>
                <fullName>Fehler im Vertriebsdatensegmen</fullName>
            </value>
            <value>
                <fullName>FIGrund der Ablehnung Neuanlage/-nderung CS1/CS2</fullName>
            </value>
            <value>
                <fullName>Grund 27</fullName>
            </value>
            <value>
                <fullName>SAP-Clearingstelle kontakten</fullName>
            </value>
            <value>
                <fullName>Sonstiges</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>