unpackaged/main/default/objects/Account/fields/Connection_type_daughter__c.field-meta.xml
<CustomField>
    <fullName>Connection_type_daughter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verbindungstyp-Tochter</label>
    <type>Checkbox</type>
</CustomField>