unpackaged/main/default/objects/Account/fields/Connection_Type_Mother__c.field-meta.xml
<CustomField>
    <fullName>Connection_Type_Mother__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verbindungstyp-Mutter</label>
    <type>Checkbox</type>
</CustomField>