unpackaged/main/default/objects/Account/fields/Count_Characters_DebNr__c.field-meta.xml
<CustomField>
    <fullName>Count_Characters_DebNr__c</fullName>
    <formula>LEN( CL_DebitorenNr__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count Characters DebNr</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>