unpackaged/main/default/objects/Account/fields/CRF__c.field-meta.xml
<CustomField>
    <fullName>CRF__c</fullName>
    <description>Creditreform-Nummer der Firma</description>
    <externalId>true</externalId>
    <inlineHelpText>Creditreform-Nummer der Firma</inlineHelpText>
    <label>CRF</label>
    <length>10</length>
    <type>Text</type>
</CustomField>