unpackaged/main/default/objects/Account/fields/Edgar_ID__c.field-meta.xml
<CustomField>
    <fullName>Edgar_ID__c</fullName>
    <description>Customer-ID der Edgar Ambient Media Group GmbH</description>
    <label>Edgar-ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>