unpackaged/main/default/objects/Account/fields/f42_MIg_Controller__c.field-meta.xml
<CustomField>
    <fullName>f42_MIg_Controller__c</fullName>
    <defaultValue>false</defaultValue>
    <label>f42 MIg Controller</label>
    <type>Checkbox</type>
</CustomField>