unpackaged/main/default/objects/Account/fields/Firma_existiert_nicht_mehr__c.field-meta.xml
<CustomField>
    <fullName>Firma_existiert_nicht_mehr__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Firma existiert nicht mehr</label>
    <type>Checkbox</type>
</CustomField>