unpackaged/main/default/objects/Account/fields/Firma_ist_Dublette__c.field-meta.xml
<CustomField>
    <fullName>Firma_ist_Dublette__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SL-351</description>
    <label>Firma ist Dublette</label>
    <type>Checkbox</type>
</CustomField>