unpackaged/main/default/objects/Account/fields/Foundation_year_or_date__c.field-meta.xml
<CustomField>
    <fullName>Foundation_year_or_date__c</fullName>
    <label>Gründung (Jahr oder Datum)</label>
    <length>9</length>
    <type>Text</type>
</CustomField>