unpackaged/main/default/objects/Account/fields/Gr_nde_keine_Betreuung__c.field-meta.xml
<CustomField>
    <fullName>Gr_nde_keine_Betreuung__c</fullName>
    <label>Gründe keine Betreuung</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Betreuungsbedarf__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Einmalbuchung/einmalige Veranstaltung</fullName>
            </value>
            <value>
                <fullName>Insolvenz/keine Wirtschaftlichkeit gegeben</fullName>
            </value>
            <value>
                <fullName>Gehört zu übergeordnetem Account</fullName>
            </value>
            <value>
                <fullName>Sonstige</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>