unpackaged/main/default/objects/Account/fields/Jahresgespr_ch__c.field-meta.xml
<CustomField>
    <fullName>Jahresgespr_ch__c</fullName>
    <label>Jahresgespräch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>