unpackaged/main/default/objects/Account/fields/Kundenstatus_Lokal__c.field-meta.xml
<CustomField>
    <fullName>Kundenstatus_Lokal__c</fullName>
    <label>Kundenstatus Lokal</label>
    <type>TextArea</type>
</CustomField>