unpackaged/main/default/objects/Account/fields/Kundenstatus_Regional__c.field-meta.xml
<CustomField>
    <fullName>Kundenstatus_Regional__c</fullName>
    <label>Kundenstatus Regional</label>
    <type>TextArea</type>
</CustomField>