unpackaged/main/default/objects/Account/fields/Landkreis__c.field-meta.xml
<CustomField>
    <fullName>Landkreis__c</fullName>
    <formula>LKM_Region__r.Landkreis__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Landkreis</label>
    <type>Text</type>
</CustomField>