unpackaged/main/default/objects/Account/fields/Last_Close_Date_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Last_Close_Date_Opportunity__c</fullName>
    <formula>MaxOppCloseDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Close Date Opportunity</label>
    <type>Date</type>
</CustomField>