unpackaged/main/default/objects/Account/fields/LKM_AccountIdKomplett__c.field-meta.xml
<CustomField>
    <fullName>LKM_AccountIdKomplett__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Id Komplett</label>
    <type>Text</type>
</CustomField>