unpackaged/main/default/objects/Account/fields/LKM_AccountStatus__c.field-meta.xml
<CustomField>
    <fullName>LKM_AccountStatus__c</fullName>
    <description>Information darüber, ob dieser Account schon Kunde ist, irrelevant für weil Ex-Kunde oder besitzt keine Filialen/ Standorte, ein untergeordneter Account oder auf der Blacklist etc.</description>
    <label>Account Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Freier Account</fullName>
            </value>
            <value>
                <fullName>Sellerbesitz</fullName>
            </value>
            <value>
                <fullName>Untergeordneter Account</fullName>
            </value>
            <value>
                <fullName>Blacklist</fullName>
            </value>
            <value>
                <fullName>Irrelevater Account</fullName>
            </value>
            <value>
                <fullName>Kunde</fullName>
            </value>
            <value>
                <fullName>Ex-Kunde</fullName>
            </value>
            <value>
                <fullName>Kunde/Verlängerer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>