unpackaged/main/default/objects/Account/fields/LKM_Adressart__c.field-meta.xml
<CustomField>
    <fullName>LKM_Adressart__c</fullName>
    <label>Adressart</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Debitor/Vertriebsadresse</fullName>
            </value>
            <value>
                <fullName>Vertriebsadresse</fullName>
            </value>
            <value>
                <fullName>Debitor</fullName>
            </value>
            <value>
                <fullName>Test 1</fullName>
                <isActive>false</isActive>
                <label>Test 1</label>
            </value>
            <value>
                <fullName>Test 2</fullName>
                <isActive>false</isActive>
                <label>Test 2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>