unpackaged/main/default/objects/Account/fields/LKM_AdWordAnzahl__c.field-meta.xml
<CustomField>
    <fullName>LKM_AdWordAnzahl__c</fullName>
    <description>Anzahl AdWords Anzeigen</description>
    <inlineHelpText>Wieviele AdWords Anzeigen der Account am Markt aktiv hat</inlineHelpText>
    <label>Anzahl AdWords Anzeigen</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>