unpackaged/main/default/objects/Account/fields/LKM_AdWordDatum__c.field-meta.xml
<CustomField>
    <fullName>LKM_AdWordDatum__c</fullName>
    <description>Datum der letzten AdWords Anzeige</description>
    <inlineHelpText>Datum der letzten AdWords Anzeige am Markt</inlineHelpText>
    <label>Datum der letzten AdWords Anzeige</label>
    <type>Date</type>
</CustomField>