unpackaged/main/default/objects/Account/fields/LKM_AdwordLink__c.field-meta.xml
<CustomField>
    <fullName>LKM_AdwordLink__c</fullName>
    <inlineHelpText>Ziel-URL der Adwords Anzeige</inlineHelpText>
    <label>Ziel-URL der Adwords Anzeige</label>
    <type>Url</type>
</CustomField>