unpackaged/main/default/objects/Account/fields/LKM_Adwords__c.field-meta.xml
<CustomField>
    <fullName>LKM_Adwords__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Kontrollfeld für Firmen denen das RIF-Adwords Produkt angeboten wurde</description>
    <inlineHelpText>Zeigt an, ob dem Kunden RIF-AdWords von RegioHelden angeboten wurde</inlineHelpText>
    <label>Adwords</label>
    <type>Checkbox</type>
</CustomField>