unpackaged/main/default/objects/Account/fields/LKM_AdWordsAktivitaet__c.field-meta.xml
<CustomField>
    <fullName>LKM_AdWordsAktivitaet__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Der Partner macht bereits AdWords (zum Zeitpunkt der Recherche)</description>
    <inlineHelpText>Zeigt an, ob der Kunde mit AdWords am Markt aktiv ist</inlineHelpText>
    <label>AdWords-Aktivität</label>
    <type>Checkbox</type>
</CustomField>