unpackaged/main/default/objects/Account/fields/LKM_AnzahlFilialen__c.field-meta.xml
<CustomField>
    <fullName>LKM_AnzahlFilialen__c</fullName>
    <inlineHelpText>Abschätzung von Yasni, wieviele Standorte/Filialen der Account hat</inlineHelpText>
    <label>Anzahl Filialen</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>