unpackaged/main/default/objects/Account/fields/LKM_AnzahlPremiumEintraege__c.field-meta.xml
<CustomField>
    <fullName>LKM_AnzahlPremiumEintraege__c</fullName>
    <description>Anzahl gefundener Premium Einträge</description>
    <inlineHelpText>Anzahl gefundener Premium Einträge in Branchenbüchern (Yasni)</inlineHelpText>
    <label>Anzahl Premium Einträge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>